--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -68,7 +68,7 @@ License: You must have a valid license purchased only from themeforest(the above
         }
 
         .earn {
-            height: 70%;
+            height: 60%;
         }
 
         .paging {
@@ -76,7 +76,7 @@ License: You must have a valid license purchased only from themeforest(the above
         }
 
         .spend {
-            height: 20%;
+            height: 30%;
         }
 
         .vertical-center {
@@ -129,7 +129,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <input type="number" readonly id="payMoney" class="col-sm-2" value="0" style="color:orange;">
 
                                 <label  class="col-sm-1 text-center" ><b>Tồn quỹ</b></label>
-                                <input type="number" readonly id="moneyDay" class="col-sm-2" value="0" style="color:blue;">
+                                <input type="number" readonly id="profit" class="col-sm-2" value="0" style="color:blue;">
                             </div>
 
                         </div>
