--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -91,11 +91,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <input type="text" class="form-control material-input col-lg-6"
                                        placeholder="Tìm kiếm theo tên" id="name">
                                 <select class="form-control kt-select2 col-lg-2" id="cb_payment" name="cb_payment">
-                                    <option value="all" selected>Tất cả</option>
-                                    <option value="pre">Trả trước</option>
-                                    <option value="post">Trả sau</option>
+                                    <option value="0" selected>Tất cả</option>
+                                    <option value="1">Trả trước</option>
+                                    <option value="2">Trả sau</option>
                                 </select>
-                                <button type="button" class="btn btn-warning" style="height: fit-content;">Tìm kiếm
+                                <button type="button" id="searchCus" class="btn btn-warning" style="height: fit-content;">Tìm kiếm
                                 </button>
                             </div>
 
@@ -178,13 +178,42 @@ License: You must have a valid license purchased only from themeforest(the above
         </div>
     </div>
 </div>
-
+<th:block th:replace="customer/index_func.html"></th:block>
 <!--end::Modal-->
-<!--<div data-th-replace="partials/_footer/base"></div>-->
-<!--<th:block th:replace="transaction/detail.html"></th:block>-->
+
 <!-- end:: Page -->
 
 <!-- begin::Global Config(global config for global JS sciprts) -->
+<script>
+    var KTAppOptions = {
+        "colors": {
+            "state": {
+                "brand": "#5d78ff",
+                "dark": "#282a3c",
+                "light": "#ffffff",
+                "primary": "#5867dd",
+                "success": "#34bfa3",
+                "info": "#36a3f7",
+                "warning": "#ffb822",
+                "danger": "#fd3995"
+            },
+            "base": {
+                "label": [
+                    "#c5cbe3",
+                    "#a1a8c3",
+                    "#3d4465",
+                    "#3e4466"
+                ],
+                "shape": [
+                    "#f0f3ff",
+                    "#d9dffa",
+                    "#afb4d4",
+                    "#646c9a"
+                ]
+            }
+        }
+    };
+</script>
 
 <!-- end::Global Config -->
 
@@ -200,7 +229,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <script src="assets/js/pages/crud/datatables/basic/paginations.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
-
+<script src="assets/js/custom_autocomplete.js" type="text/javascript"></script>
 <!--end::Page Scripts -->
 </body>
 
