--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -123,13 +123,13 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
                             <div class="row kt-portlet__head--right vertical-center" style="width:70%; justify-content: right">
                                 <label class="col-sm-1 text-center"><b>Thu</b></label>
-                                <input type="number" readonly id="earnMoney" class="col-sm-2" style="color:green;" value="0">
+                                <input readonly id="earnMoney" class="col-sm-2" style="color:green;" value="0">
 
                                 <label  class="col-sm-1 text-center"><b>Chi</b></label>
-                                <input type="number" readonly id="payMoney" class="col-sm-2" value="0" style="color:orange;">
+                                <input readonly id="payMoney" class="col-sm-2" value="0" style="color:orange;">
 
                                 <label  class="col-sm-1 text-center" ><b>Tồn quỹ</b></label>
-                                <input type="number" readonly id="profit" class="col-sm-2" value="0" style="color:blue;">
+                                <input readonly id="profit" class="col-sm-2" value="0" style="color:blue;">
                             </div>
 
                         </div>
