fill payment when select customer

--- a/src/main/resources/templates/transaction/detail.html
+++ b/src/main/resources/templates/transaction/detail.html
@@ -80,9 +80,9 @@
                     + '<td>' + item.debt + '</td>'
                     + '<td>' + item.note + '</td>'
                     + '<td>' + '<div style="text-align: center; vertical-align: middle;">' +
-                    '<button type="button" data-toggle="modal" class="btn btn-circle btn-icon edit-tran" style="margin-right: 0.5rem;"' +
+                    '<button type="button" data-toggle="modal" class="btn btn-circle btn-icon edit-tran"' +
                     ' href="#kt_select2_modal" data-index="' + (i - 1) + '"><i class="flaticon-edit"></i></button>' +
-                    '<button type="button" class="btn btn-circle btn-icon delete-tran" data-index="' + (i - 1) + '" style="margin-left: 0.5rem"' +
+                    '<button type="button" class="btn btn-circle btn-icon delete-tran" data-index="' + (i - 1) + '" ' +
                     '  ><i class="flaticon-delete"></i></button></div>' + '</td>'
                     + '</tr>';
             }
