update giao dien

--- a/src/main/resources/templates/customer/index_func.html
+++ b/src/main/resources/templates/customer/index_func.html
@@ -46,9 +46,9 @@
                     + '<td>' + item.billing + '</td>'
                     + '<td>' + item.note + '</td>'
                     + '<td>' + '<div style="text-align: center; vertical-align: middle;">' +
-                    '<button type="button" data-toggle="modal" class="btn btn-circle btn-icon edit-cus" style="margin-right: 0.5rem;"' +
+                    '<button type="button" data-toggle="modal" class="btn btn-circle btn-icon edit-cus"' +
                     ' href="#kt_modal_3" data-index="' + (i - 1) + '"><i class="flaticon-edit"></i></button>' +
-                    '<button type="button" class="btn btn-circle btn-icon delete-cus" data-index="' + (i - 1) + '" style="margin-left: 0.5rem"' +
+                    '<button type="button" class="btn btn-circle btn-icon delete-cus" data-index="' + (i - 1) + '" ' +
                     '  ><i class="flaticon-delete"></i></button></div>'
                     + '</td>'
                     + '</tr>';
