--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -100,7 +100,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
 
                         </div>
-                        <div class="kt-portlet__body " style="font-size: x-small;">
+                        <div class="kt-portlet__body ">
                             <div class="kt-section ">
                                 <div class="kt-section__content">
                                     <div class="table-responsive">
