--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -134,7 +134,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
                         </div>
                         <div id="error-log"></div>
-                        <div class="kt-portlet__body body1" style="font-size: x-small;">
+                        <div class="kt-portlet__body body1">
                             <div class="kt-section body1">
                                 <div class="kt-section__content body1">
                                     <div class="table-responsive earn">
