--- a/src/main/resources/templates/transaction/index.html
+++ b/src/main/resources/templates/transaction/index.html
@@ -53,9 +53,23 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- end::Head -->
 
 <!-- begin::Body -->
+<body class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header-mobile--fixed kt-subheader--enabled kt-subheader--fixed kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
 
-<body
-        class="kt-aside--enabled kt-aside--fixed kt-page--loading">
+<!-- begin:: Page -->
+
+<!-- begin:: Header Mobile -->
+<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
+    <div class="kt-header-mobile__logo">
+        <a href="index.html">
+            <img alt="Logo" src="assets/media/logos/logo-light.png" />
+        </a>
+    </div>
+    <div class="kt-header-mobile__toolbar">
+        <button class="kt-header-mobile__toggler kt-header-mobile__toggler--left" id="kt_aside_mobile_toggler"><span></span></button>
+    </div>
+</div>
+
+<!-- end:: Header Mobile -->
 
 <!-- begin:: Page -->
 
